--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -1207,6 +1207,192 @@
             <!-- Начало формы для перекрытий -->
             <h3 class="perekrit__h2">Выберите тип перекрытия:</h3>
             <div class="perekrit__type">
+               <div class="perekrit_wood">
+                  <div class="perekrit_wood__checkbox bg_fon_roof">
+                     <div class="perekrit_wood__wrp">
+                        <img class="img__perekrit_wood" src="../img/calc/teploizoliacia/perekrit_wood.svg" alt="деревянное перекрытие" height="130" id="img__perekrit_wood-id">
+                        <img class="img__perekrit_wood hidden" src="../img/calc/teploizoliacia/perekrit_wood(color).svg" alt="деревянное перекрытие" height="130" id="img__perekrit_wood_color-id">
+                     </div>
+                     <div class="checkbox__wrp">
+                        <label class="custom-lable" for="check-perekrit_wood">
+                        <input type="checkbox" id="check-perekrit_wood" value="interest_perekrit_wood" name="perekrit_wood_item" onchange='showPerekritWoodItems(this)'>
+                        <i></i>
+                        <span class="perekrit_wood__span">Перекрытие по деревянным лагам</span>
+                        </label>
+                     </div>
+                  </div>
+                  <div class="perekrit_wood__all_wrp hidden" id="perekrit_wood__all_wrp-id">
+                     <div class="perekrit_wood__form_wrp">
+                        <div class="perekrit_wood_wrp scetchik_formy" id="perekrit_wood_wrp">
+                           <form action="#" class="perekrit_wood__form" id="perekrit_wood__form-id">
+                              <span class="perekrit_wood__label nomer_formy">Перекрытие №</span>
+                              <svg class="remove-form-btn remove-form" id="close-formPerekritWood" onclick="deleteFormPerekritWood(this)"
+                                 focusable="false" width="20" height="20" viewBox="0 0 20 20">
+                                 <path class="st0"
+                                    d="M12.7,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5s0.5-0.2,0.5-0.5V7.7C13.2,7.5,13,7.2,12.7,7.2z"/>
+                                 <path class="st0"
+                                    d="M7.3,7.2C7,7.2,6.8,7.5,6.8,7.7v8.9C6.8,16.8,7,17,7.3,17c0.3,0,0.5-0.2,0.5-0.5V7.7C7.7,7.5,7.5,7.2,7.3,7.2z"/>
+                                 <path class="st0" d="M3.3,6v11.5c0,0.7,0.2,1.3,0.7,1.8C4.4,19.7,5,20,5.6,20h8.7c0.6,0,1.2-0.3,1.7-0.7c0.4-0.5,0.7-1.1,0.7-1.8V6
+                                    c0.9-0.2,1.4-1.1,1.3-2c-0.1-0.9-0.9-1.6-1.7-1.6h-2.4V1.9c0-0.5-0.2-1-0.5-1.3C13,0.2,12.5,0,12,0H7.9C7.5,0,7,0.2,6.6,0.5
+                                    C6.3,0.9,6.1,1.4,6.1,1.9v0.6H3.7C2.9,2.4,2.1,3.1,2,4C1.9,4.9,2.4,5.7,3.3,6z M14.4,19.1H5.6c-0.8,0-1.4-0.7-1.4-1.6V6h11.5v11.5
+                                    C15.8,18.4,15.1,19.1,14.4,19.1z M7,1.9c0-0.2,0.1-0.5,0.3-0.7C7.5,1,7.7,0.9,7.9,0.9H12c0.2,0,0.5,0.1,0.6,0.3
+                                    c0.2,0.2,0.3,0.4,0.3,0.7v0.6H7V1.9z M3.7,3.4h12.5c0.5,0,0.8,0.4,0.8,0.8s-0.4,0.8-0.8,0.8H3.7c-0.5,0-0.8-0.4-0.8-0.8
+                                    S3.3,3.4,3.7,3.4z"/>
+                                 <path class="st0"
+                                    d="M10,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5c0.3,0,0.5-0.2,0.5-0.5V7.7C10.5,7.5,10.2,7.2,10,7.2z"/>
+                              </svg>
+                              <svg class="copy-form-btn copy-form" onclick="copyFormPerekritWood(this)"
+                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0"
+                                 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="20">
+                                 <path d="M74.7,512h256c29.4,0,53.3-23.9,53.3-53.3v-320c0-29.4-23.9-53.3-53.3-53.3h-256c-29.4,0-53.3,23.9-53.3,53.3v320
+                                    C21.3,488.1,45.3,512,74.7,512z M330.7,106.7c17.6,0,32,14.4,32,32v320c0,17.6-14.4,32-32,32h-256c-17.6,0-32-14.4-32-32v-320
+                                    c0-17.6,14.4-32,32-32H330.7z"/>
+                                 <path d="M416,448h21.3c29.4,0,53.3-23.9,53.3-53.3V53.3c0-29.4-23.9-53.3-53.3-53.3h-256C151.9,0,128,23.9,128,53.3
+                                    c0,5.9,4.8,10.7,10.7,10.7s10.7-4.8,10.7-10.7c0-17.6,14.4-32,32-32h256c17.6,0,32,14.4,32,32v341.3c0,17.6-14.4,32-32,32H416
+                                    c-5.9,0-10.7,4.8-10.7,10.7S410.1,448,416,448z"/>
+                                 <path d="M117.3,362.7H288c5.9,0,10.7-4.8,10.7-10.7c0-5.9-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7
+                                    C106.7,357.9,111.4,362.7,117.3,362.7z"/>
+                                 <path d="M117.3,448H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,448,117.3,448z"/>
+                                 <path d="M117.3,277.3H288c5.9,0,10.7-4.8,10.7-10.7S293.9,256,288,256H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,277.3,117.3,277.3z"
+                                    />
+                                 <path d="M117.3,192H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,192,117.3,192z"/>
+                              </svg>
+                              <span class="podskazka">Копировать</span>
+                              <div class="input_label__groups_item-wrp">
+                                 <div class="input_label__groups-wrp">
+                                    <div class="input_label-wrp">
+                                       <label class="input_label">Длина(L1), м</label>
+                                       <input class="filter_data perekrit_wood__length input-style" type="number"
+                                          name="data[Деревянные перекрития][0][Длина]" step="0.0001" min="0"
+                                          oninput="validity.valid||(value='');"
+                                          onkeyup="funcPerekritWood(); sumAreasPerekritWood();">
+                                    </div>
+                                    <div class="input_label-wrp">
+                                       <label class="input_label">
+                                       Ширина(L2), м </label>
+                                       <input class="filter_data perekrit_wood__width input-style" type="number"
+                                          name="data[Деревянные перекрития][0][Ширина]" step="0.0001" min="0"
+                                          oninput="validity.valid||(value='');"
+                                          onkeyup="funcPerekritWood(); sumAreasPerekritWood();">
+                                    </div>
+                                 </div>
+                                 <div class="input_label-wrp">
+                                    <label class="input_label">Площадь, м&sup2;</label>
+                                    <input class="perekrit_wood__result input-style" type="text"
+                                       name="perekrit_wood__result[]" disabled>
+                                 </div>
+                              </div>
+                           </form>
+                        </div>
+                        <button class="add-form-btn add-form__perekrit_wood" id="add__perekrit_wood" type="button">
+                           <svg class="add-icon" focusable="false" width="20" height="20" viewBox="0 0 20 20">
+                              <path class="st0" d="M10,0C4.48,0,0,4.48,0,10s4.48,10,10,10s10-4.48,10-10S15.52,0,10,0z M14.38,10.83h-3.54v3.54
+                                 c0,0.46-0.38,0.83-0.83,0.83s-0.83-0.38-0.83-0.83v-3.54H5.62c-0.46,0-0.83-0.38-0.83-0.83s0.38-0.83,0.83-0.83h3.54V5.62
+                                 c0-0.46,0.38-0.83,0.83-0.83s0.83,0.38,0.83,0.83v3.54h3.54c0.46,0,0.83,0.38,0.83,0.83S14.83,10.83,14.38,10.83z"/>
+                           </svg>
+                           <span class="txt-btn">добавить перекрытие</span>
+                        </button>
+                     </div>
+                  </div>
+               </div>
+               <div class="perekrit_stone">
+                  <div class="perekrit_stone__checkbox bg_fon_roof2">
+                     <div class="perekrit_stone__wrp">
+                        <img class="img__perekrit_stone" src="../img/calc/teploizoliacia/perekrit_beton.svg" alt="бетонное перекрытие" height="130" id="img__perekrit_stone-id">
+                        <img class="img__perekrit_stone hidden" src="../img/calc/teploizoliacia/perekrit_beton(color).svg" alt="бетонное перекрытие" height="130" id="img__perekrit_stone_color-id">
+                     </div>
+                     <div class="checkbox__wrp">
+                        <label class="custom-lable" for="check-perekrit_stone">
+                        <input type="checkbox" id="check-perekrit_stone" value="interest_perekrit_stone" name="perekrit_stone_item" onchange='showPerekritStoneItems(this)'>
+                        <i></i>
+                        <span class="perekrit_stone__span">Перекрытие по бетонному основанию</span>
+                        </label>
+                     </div>
+                  </div>
+                  <div class="perekrit_stone__all_wrp hidden" id="perekrit_stone__all_wrp-id">
+                     <div class="perekrit_stone__form_wrp">
+                        <div class="perekrit_stone_wrp scetchik_formy" id="perekrit_stone_wrp">
+                           <form action="#" class="perekrit_stone__form" id="perekrit_stone__form-id">
+                              <span class="perekrit_stone__label nomer_formy">Перекрытие №</span>
+                              <svg class="remove-form-btn remove-form" id="close-formPerekritStone" onclick="deleteFormPerekritStone(this)"
+                                 focusable="false" width="20" height="20" viewBox="0 0 20 20">
+                                 <path class="st0"
+                                    d="M12.7,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5s0.5-0.2,0.5-0.5V7.7C13.2,7.5,13,7.2,12.7,7.2z"/>
+                                 <path class="st0"
+                                    d="M7.3,7.2C7,7.2,6.8,7.5,6.8,7.7v8.9C6.8,16.8,7,17,7.3,17c0.3,0,0.5-0.2,0.5-0.5V7.7C7.7,7.5,7.5,7.2,7.3,7.2z"/>
+                                 <path class="st0" d="M3.3,6v11.5c0,0.7,0.2,1.3,0.7,1.8C4.4,19.7,5,20,5.6,20h8.7c0.6,0,1.2-0.3,1.7-0.7c0.4-0.5,0.7-1.1,0.7-1.8V6
+                                    c0.9-0.2,1.4-1.1,1.3-2c-0.1-0.9-0.9-1.6-1.7-1.6h-2.4V1.9c0-0.5-0.2-1-0.5-1.3C13,0.2,12.5,0,12,0H7.9C7.5,0,7,0.2,6.6,0.5
+                                    C6.3,0.9,6.1,1.4,6.1,1.9v0.6H3.7C2.9,2.4,2.1,3.1,2,4C1.9,4.9,2.4,5.7,3.3,6z M14.4,19.1H5.6c-0.8,0-1.4-0.7-1.4-1.6V6h11.5v11.5
+                                    C15.8,18.4,15.1,19.1,14.4,19.1z M7,1.9c0-0.2,0.1-0.5,0.3-0.7C7.5,1,7.7,0.9,7.9,0.9H12c0.2,0,0.5,0.1,0.6,0.3
+                                    c0.2,0.2,0.3,0.4,0.3,0.7v0.6H7V1.9z M3.7,3.4h12.5c0.5,0,0.8,0.4,0.8,0.8s-0.4,0.8-0.8,0.8H3.7c-0.5,0-0.8-0.4-0.8-0.8
+                                    S3.3,3.4,3.7,3.4z"/>
+                                 <path class="st0"
+                                    d="M10,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5c0.3,0,0.5-0.2,0.5-0.5V7.7C10.5,7.5,10.2,7.2,10,7.2z"/>
+                              </svg>
+                              <svg class="copy-form-btn copy-form" onclick="copyFormPerekritStone(this)"
+                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0"
+                                 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="20">
+                                 <path d="M74.7,512h256c29.4,0,53.3-23.9,53.3-53.3v-320c0-29.4-23.9-53.3-53.3-53.3h-256c-29.4,0-53.3,23.9-53.3,53.3v320
+                                    C21.3,488.1,45.3,512,74.7,512z M330.7,106.7c17.6,0,32,14.4,32,32v320c0,17.6-14.4,32-32,32h-256c-17.6,0-32-14.4-32-32v-320
+                                    c0-17.6,14.4-32,32-32H330.7z"/>
+                                 <path d="M416,448h21.3c29.4,0,53.3-23.9,53.3-53.3V53.3c0-29.4-23.9-53.3-53.3-53.3h-256C151.9,0,128,23.9,128,53.3
+                                    c0,5.9,4.8,10.7,10.7,10.7s10.7-4.8,10.7-10.7c0-17.6,14.4-32,32-32h256c17.6,0,32,14.4,32,32v341.3c0,17.6-14.4,32-32,32H416
+                                    c-5.9,0-10.7,4.8-10.7,10.7S410.1,448,416,448z"/>
+                                 <path d="M117.3,362.7H288c5.9,0,10.7-4.8,10.7-10.7c0-5.9-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7
+                                    C106.7,357.9,111.4,362.7,117.3,362.7z"/>
+                                 <path d="M117.3,448H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,448,117.3,448z"/>
+                                 <path d="M117.3,277.3H288c5.9,0,10.7-4.8,10.7-10.7S293.9,256,288,256H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,277.3,117.3,277.3z"
+                                    />
+                                 <path d="M117.3,192H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,192,117.3,192z"/>
+                              </svg>
+                              <span class="podskazka">Копировать</span>
+                              <div class="input_label__groups_item-wrp">
+                                 <div class="input_label__groups-wrp">
+                                    <div class="input_label-wrp">
+                                       <label class="input_label">Длина(L1), м</label>
+                                       <input class="filter_data perekrit_stone__length input-style" type="number"
+                                          name="data[Бетонные перекрития][0][Длина]" step="0.0001" min="0"
+                                          oninput="validity.valid||(value='');"
+                                          onkeyup="funcPerekritStone(); sumAreasPerekritStone();">
+                                    </div>
+                                    <div class="input_label-wrp">
+                                       <label class="input_label">
+                                       Ширина(L2), м </label>
+                                       <input class="filter_data perekrit_stone__width input-style" type="number"
+                                          name="data[Бетонные перекрития][0][Ширина]" step="0.0001" min="0"
+                                          oninput="validity.valid||(value='');"
+                                          onkeyup="funcPerekritStone(); sumAreasPerekritStone();">
+                                    </div>
+                                 </div>
+                                 <div class="input_label-wrp">
+                                    <label class="input_label">Площадь, м&sup2;</label>
+                                    <input class="perekrit_stone__result input-style" type="text"
+                                       name="perekrit_stone__result[]" disabled>
+                                 </div>
+                              </div>
+                           </form>
+                        </div>
+                        <button class="add-form-btn add-form__perekrit_stone" id="add__perekrit_stone" type="button">
+                           <svg class="add-icon" focusable="false" width="20" height="20" viewBox="0 0 20 20">
+                              <path class="st0" d="M10,0C4.48,0,0,4.48,0,10s4.48,10,10,10s10-4.48,10-10S15.52,0,10,0z M14.38,10.83h-3.54v3.54
+                                 c0,0.46-0.38,0.83-0.83,0.83s-0.83-0.38-0.83-0.83v-3.54H5.62c-0.46,0-0.83-0.38-0.83-0.83s0.38-0.83,0.83-0.83h3.54V5.62
+                                 c0-0.46,0.38-0.83,0.83-0.83s0.83,0.38,0.83,0.83v3.54h3.54c0.46,0,0.83,0.38,0.83,0.83S14.83,10.83,14.38,10.83z"/>
+                           </svg>
+                           <span class="txt-btn">добавить перекрытие</span>
+                        </button>
+                     </div>
+                  </div>
+               </div>
+               <div class="all-results-wrp hidden1">
+                  <label class="input_label">Общая площадь перекрытий по дер. лагам, м² </label>
+                  <input class="filter_data perekrit_wood__area-all2 input-style" id="perekrit_wood__area-all2-id" disabled type="number"
+                     name="data[Площадь деревянных перекрытий]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая площадь перекрытий по бетон. основ., м² </label>
+                  <input class="filter_data perekrit_stone__area-all2 input-style" id="perekrit_stone__area-all2-id" disabled type="number"
+                     name="data[Площадь бетонных перекрытий]"
+                     step="0.0001" min="0">  
+               </div>
             </div>
          </section>
       </div>
