--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -1383,7 +1383,7 @@
                      </div>
                   </div>
                </div>
-               <div class="all-results-wrp hidden1">
+               <div class="all-results-wrp hidden">
                   <label class="input_label">Общая площадь перекрытий по дер. лагам, м² </label>
                   <input class="filter_data perekrit_wood__area-all2 input-style" id="perekrit_wood__area-all2-id" disabled type="number"
                      name="data[Площадь деревянных перекрытий]"
