готовы подсказки и подкорректирован name в полях подсчета в крышах

--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -1128,77 +1128,77 @@
                <div class="all-results-wrp hidden">
                   <label class="input_label">Общий периметр каркасных стен, м </label>
                   <input class="filter_data karkas_wall__perimeter-all input-style" disabled id="karkas_wall__perimeter-all-id" type="number"
-                     name="data[Периметр стен]"
+                     name="data[Каркасная стена][Периметр стен]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь каркасных стен, м² </label>
                   <input class="filter_data karkas_wall__area-all2 input-style" id="karkas_wall__area-all2-id" disabled type="number"
-                     name="data[Площадь стен]"
+                     name="data[Каркасная стена][Площадь стен]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина окон в каркасных стенах, м </label>
                   <input class="filter_data karkas_window__perimeter-all input-style" disabled id="karkas_window__perimeter-all-id" type="number"
-                     name="data[Ширина окон]"
+                     name="data[Каркасная стена][Ширина окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь окон в каркасных стенах, м² </label>
                   <input class="filter_data karkas_window__area-all2 input-style" id="karkas_window__area-all2-id" disabled type="number"
-                     name="data[Площадь окон]"
+                     name="data[Каркасная стена][Площадь окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина дверей в каркасных стенах, м </label>
                   <input class="filter_data karkas_door__perimeter-all input-style" disabled id="karkas_door__perimeter-all-id" type="number"
-                     name="data[Ширина дверей]"
+                     name="data[Каркасная стена][Ширина дверей]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь дверей в каркасных стенах, м² </label>
                   <input class="filter_data karkas_door__area-all2 input-style" id="karkas_door__area-all2-id" disabled type="number"
-                     name="data[Площадь дверей]"
+                     name="data[Каркасная стена][Площадь дверей]"
                      step="0.0001" min="0">
                   <!-- Вывод общих значений слоистых стен -->
                   <label class="input_label">Общий периметр слоистых стен, м </label>
                   <input class="filter_data stone_wall__perimeter-all input-style" disabled id="stone_wall__perimeter-all-id" type="number"
-                     name="data[Периметр стен]"
+                     name="data[Слоистая стена][Периметр стен]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь слоистых стен, м² </label>
                   <input class="filter_data stone_wall__area-all2 input-style" id="stone_wall__area-all2-id" disabled type="number"
-                     name="data[Площадь стен]"
+                     name="data[Слоистая стена][Площадь стен]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина окон в слоистых стенах, м </label>
                   <input class="filter_data stone_window__perimeter-all input-style" disabled id="stone_window__perimeter-all-id" type="number"
-                     name="data[Ширина окон]"
+                     name="data[Слоистая стена][Ширина окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь окон в слоистых стенах, м² </label>
                   <input class="filter_data stone_window__area-all2 input-style" id="stone_window__area-all2-id" disabled type="number"
-                     name="data[Площадь окон]"
+                     name="data[Слоистая стена][Площадь окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина дверей в слоистых стенах, м </label>
                   <input class="filter_data stone_door__perimeter-all input-style" disabled id="stone_door__perimeter-all-id" type="number"
-                     name="data[Ширина дверей]"
+                     name="data[Слоистая стена][Ширина дверей]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь дверей в слоистых стенах, м² </label>
                   <input class="filter_data stone_door__area-all2 input-style" id="stone_door__area-all2-id" disabled type="number"
-                     name="data[Площадь дверей]"
+                     name="data[Слоистая стена][Площадь дверей]"
                      step="0.0001" min="0"> 
                   <!-- Вывод общих значений перегородок -->
                   <label class="input_label">Общий периметр перегородок, м </label>
                   <input class="filter_data peregor_wall__perimeter-all input-style" disabled id="peregor_wall__perimeter-all-id" type="number"
-                     name="data[Периметр перегородок]"
+                     name="data[Перегородки][Периметр перегородок]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь перегородок, м² </label>
                   <input class="filter_data peregor_wall__area-all2 input-style" id="peregor_wall__area-all2-id" disabled type="number"
-                     name="data[Площадь перегородок]"
+                     name="data[Перегородки][Площадь перегородок]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина окон в перегородках, м </label>
                   <input class="filter_data peregor_window__perimeter-all input-style" disabled id="peregor_window__perimeter-all-id" type="number"
-                     name="data[Ширина окон]"
+                     name="data[Перегородки][Ширина окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь окон в перегородках, м² </label>
                   <input class="filter_data peregor_window__area-all2 input-style" id="peregor_window__area-all2-id" disabled type="number"
-                     name="data[Площадь окон]"
+                     name="data[Перегородки][Площадь окон]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая ширина дверей в перегородках, м </label>
                   <input class="filter_data peregor_door__perimeter-all input-style" disabled id="peregor_door__perimeter-all-id" type="number"
-                     name="data[Ширина дверей]"
+                     name="data[Перегородки][Ширина дверей]"
                      step="0.0001" min="0">
                   <label class="input_label">Общая площадь дверей в перегородках, м² </label>
                   <input class="filter_data peregor_door__area-all2 input-style" id="peregor_door__area-all2-id" disabled type="number"
-                     name="data[Площадь дверей]"
+                     name="data[Перегородки][Площадь дверей]"
                      step="0.0001" min="0">   
                </div>
             </div>
