--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -1460,7 +1460,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__shir_otmostki input-style" placeholder="0.6 м"
                                        type="number" name="fundam_shved__shir_otmostki[]" disabled value="0.6">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/shirina-otmostki.svg" alt="Ширина отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО ширина отмостки по умолчанию 0.6 м </span>
@@ -1472,7 +1472,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_otmostki_plit input-style" placeholder="50 мм"
                                        type="number" name="fundam_shved__tolsh_otmostki_plit[]" disabled value="50">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-otmostki.svg" alt="Толщина утеплителя отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя отмостки по умолчанию 50 мм </span>
@@ -1484,7 +1484,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_yteplit_plit input-style" placeholder="100 мм"
                                        type="number" name="fundam_plita__tolsh_yteplit_plit[]" disabled value="100">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-pliti.svg" alt="Толщина утеплителя плиты" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя плиты по умолчанию 10 мм </span>                                    
@@ -1539,7 +1539,10 @@
                                     onkeyup="sumAllSquareFundamPlita()">
                               </div>
                               <div class="input_label-wrp">
-                                 <label class="input_label">Длина пола, м</label>
+                                 <label class="input_label">Длина пола, м </label><i class="far fa-question-circle fa-question-circle2"></i>
+                                 <div class="quest_wrp3">
+                                    <img class="img__quest3" src="../img/calc/teploizoliacia/ploshad-pola.svg" alt="площадь пола" height="100">
+                                 </div>
                                  <input class="fundam_plita__length-flor1 input-style"
                                     type="number" name="fundam_plita__dlina-pola[]" step="0.0001"
                                     min="0"
@@ -1547,7 +1550,10 @@
                                     onkeyup="sumSquareFundamPlitaFloor()">
                               </div>
                               <div class="input_label-wrp">
-                                 <label class="input_label">Ширина пола,м </label>
+                                 <label class="input_label">Ширина пола,м </label><i class="far fa-question-circle fa-question-circle2"></i>
+                                 <div class="quest_wrp3">
+                                    <img class="img__quest3" src="../img/calc/teploizoliacia/ploshad-pola.svg" alt="площадь пола" height="100">
+                                 </div>
                                  <input class="fundam_plita__length-flor2 input-style"
                                     type="number" name="fundam_plita__shirina-pola[]" step="0.0001"
                                     min="0"
@@ -1559,7 +1565,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__shir_otmostki input-style" placeholder="0.6 м"
                                        type="number" name="fundam_shved__shir_otmostki[]" disabled value="0.6">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/shirina-otmostki.svg" alt="Ширина отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО ширина отмостки по умолчанию 0.6 м </span>
@@ -1571,7 +1577,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_otmostki_plit input-style" placeholder="50 мм"
                                        type="number" name="fundam_shved__tolsh_otmostki_plit[]" disabled value="50">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-otmostki.svg" alt="Толщина утеплителя отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя отмостки по умолчанию 50 мм </span>
@@ -1583,7 +1589,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_yteplit_plit input-style" placeholder="100 мм"
                                        type="number" name="fundam_plita__tolsh_yteplit_plit[]" disabled value="100">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-pliti.svg" alt="Толщина утеплителя плиты" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя плиты по умолчанию 10 мм </span>                                    
@@ -1597,6 +1603,8 @@
                   <div class="fundam_shved">
                      <div class="fundam_shved__checkbox bg_fon_roof">
                         <div class="fundam_shved__wrp">
+                           <div class="l1 hidden" id="l1">11111111111111</div>
+                           <div class="l2 hidden">22222222222222</div>
                            <img class="img__fundam_shved" src="../img/calc/teploizoliacia/fundament-shved_plita.svg" alt="Фундамент Шведская утепленная плита" height="140" id="img_fundam_shved_bw-id">
                            <img class="img__fundam_shved__color hidden" src="../img/calc/teploizoliacia/fundament-shved_plita(color).svg" alt="Фундамент Шведская утепленная плита" height="140" id="img_fundam_shved_color-id">
                         </div>
@@ -1614,7 +1622,8 @@
                            name="fundam_shved__form-id">
                            <div class="input_label__groups_item-wrp">
                               <div class="input_label-wrp">
-                                 <label class="input_label">Длина(L1), м</label>
+                                 <label class="input_label" >Длина(L1), м</label>
+                                 
                                  <input class="fundam_shved__length input-style"
                                     type="number" name="fundam_shved__dlina[]" step="0.0001"
                                     min="0"
@@ -1638,7 +1647,10 @@
                                     onkeyup="sumAllSquareFundamShved()">
                               </div>
                               <div class="input_label-wrp">
-                                 <label class="input_label">Длина пола, м</label>
+                                 <label class="input_label">Длина пола, м </label><i class="far fa-question-circle fa-question-circle2"></i>
+                                 <div class="quest_wrp3">
+                                    <img class="img__quest3" src="../img/calc/teploizoliacia/ploshad-pola.svg" alt="площадь пола" height="100">
+                                 </div>
                                  <input class="fundam_shved__length-flor1 input-style"
                                     type="number" name="fundam_shved__dlina-pola[]" step="0.0001"
                                     min="0"
@@ -1646,7 +1658,10 @@
                                     onkeyup="sumSquareShvedPlitaFloor()">
                               </div>
                               <div class="input_label-wrp">
-                                 <label class="input_label">Ширина пола,м <i class="far fa-question-circle fa-question-circle2"></i></label>
+                                 <label class="input_label">Ширина пола,м </label><i class="far fa-question-circle fa-question-circle2"></i>
+                                 <div class="quest_wrp3">
+                                    <img class="img__quest3" src="../img/calc/teploizoliacia/ploshad-pola.svg" alt="площадь пола" height="100">
+                                 </div>
                                  <input class="fundam_shved__length-flor2 input-style"
                                     type="number" name="fundam_shved__ыршкштф-pola[]" step="0.0001"
                                     min="0"
@@ -1658,7 +1673,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__shir_otmostki input-style" placeholder="0.6 м"
                                        type="number" name="fundam_shved__shir_otmostki[]" disabled value="0.6">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/shirina-otmostki.svg" alt="Ширина отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО ширина отмостки по умолчанию 0.6 м </span>
@@ -1670,7 +1685,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_otmostki_plit input-style" placeholder="50 мм"
                                        type="number" name="fundam_shved__tolsh_otmostki_plit[]" disabled value="50">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-otmostki.svg" alt="Толщина утеплителя отмостки" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя отмостки по умолчанию 50 мм </span>
@@ -1682,7 +1697,7 @@
                                  <div class="input-quest_wrp">
                                     <input class="fundam_shved__tolsh_yteplit_plit input-style" placeholder="100 мм"
                                        type="number" name="fundam_plita__tolsh_yteplit_plit[]" disabled value="100">
-                                    <i class="fas fa-question-circle"></i>
+                                    <i class="fas fa-question-circle fa-question-circle1"></i>
                                     <div class="quest_wrp">
                                        <img class="img__quest2" src="../img/calc/teploizoliacia/tolshina-uteplitelia-pliti.svg" alt="Толщина утеплителя плиты" height="100">
                                        <span class="podskazka2">Для СПБ и ЛО толщина утеплителя плиты по умолчанию 10 мм </span>                                    
@@ -1719,5 +1734,64 @@
             </section>
          </div>
       </div>
+
+<!--
+
+
+      <div class="inputWithIcon inputIconBg fundam_shved__length2 input-style">
+         <input type="number" placeholder="Your name">
+         <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+       </div>
+       <br>
+       <br>
+       <div class="inputWithIcon inputIconBg fundam_shved__length2 input-style">
+         <input type="number" placeholder="Your name">
+         <i class="fa fa-envelope fa-lg fa-fw" aria-hidden="true"></i>
+       </div>
+       <br>
+       <br>
+       <div class="inputWithIcon inputIconBg fundam_shved__length2 input-style">
+         <input type="number" placeholder="Your name">
+         <i class="fa fa-phone fa-lg fa-fw" aria-hidden="true"></i>
+       </div>
+
+
+       <style>
+
+.inputWithIcon input[type="number"] {
+  padding-left: 40px;
+}
+
+.inputWithIcon {
+  position: relative;
+}
+
+.inputWithIcon i {
+  position: absolute;
+  left: 0;
+  top: 8px;
+  padding: 9px 8px;
+  color: #aaa;
+  transition: 0.3s;
+}
+
+.inputWithIcon input[type="number"]:focus + i {
+  color: dodgerBlue;
+}
+
+.inputWithIcon.inputIconBg i {
+  background-color: #aaa;
+  color: #fff;
+  padding: 9px 4px;
+  border-radius: 4px 0 0 4px;
+  margin: -14px 0 0 0;
+}
+
+.inputWithIcon.inputIconBg input[type="number"]:focus + i {
+  color: #fff;
+  background-color: dodgerBlue;
+}
+       </style>
+-->
    </body>
 </html>
